# ModelVerify

./: .gitignore  CLAUDE.md  DatasetAnalysis.py  DiagnosisPreprocess.py  DrawCompare.py  DrawCompareOnly.py  DrawModel.py  FormatData.py  GenerateFromH5.py  GenerateH5.py  GenerateH5DatasetMulti.py  GenerateTime.py  GenerateValid.py  H5Dataset2TLIO.py  H5Loader.py  ModelAnalysis.py  PrepareTFolderBatch.py  PreprocessDB.py  PreprocessDBv1.py  PreprocessDBv2.py  PreprocessDBv3.py  PreprocessDBv4.py  PreprocessDBv5.py  PreprocessDBv5_single_sync.py  PreprocessDBv6.py  README.md  ReadImuCamFromDB.py  ReadImuFromDB.py  SpinCompare.py  TLIOView.py  TODO.md  TestModel.py  TestRotate.py  UncertaintyOfError.py  VaildModel.py  VaildModelFromH5.py  VaildModelFromH5TinyIO.py  VaildModelFromH5_cross_multi.py  VaildModelFromH5atr.py  VaildModelFromH5atrdata.py  (+9 more)
.agent_history/: 2026-04-02-RANSAC拟合脚本.md
.zed/: tasks.json
base/: args_parser.py  binary.py  datatype.py  device.py  evaluate.py  interpolate.py  model.py  rerun_ext.py  rtab.py  serialize.py
converters/: AlignDbByTime.py  GenerateH5DatasetMulti.py  GetCSVFromDB.py  GetCSVFromDB2.py  TLIO2H5Dataset.py  Y2ZFix.py
docs/: API.md  DATASET_DB_SCHEMA.md  PreprocessDB完整说明文档.md  QUICKSTART.md  README.md  USAGE.md  数据处理流程.md  预处理流程.md
fit/: fit.py  fit_line.py
scripts/: batch_generate_h5.sh  batch_validate.py
tests/: TestEvaluation.py
validators/: PrintUpperBoundary.py  UncertaintyOfError.py  ValidTrack.py  VisualError.py  VisualImuTimeMatch.py  VisualRtabDb.py
visualizers/: DrawCompare.py  DrawGroudtruth.py  ImuView.py  (+2 more)
(+31 files in other folders)
