[project]
name = "modelverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "rerun-sdk>=0.27.2",
    "scipy>=1.16.3",
    "scipy-stubs>=1.16.3.0",
    "sophuspy>=1.2.0",
    "torch>=2.9.1",
]

[tool.uv.workspace]
members = [
    "dist",
]
